# HTQA-SAS

./: .env.example  .flake8  .gitignore  ANSWERS_TECHNICAL_INTERVIEW.md  Dockerfile  Dockerfile.prod  FLOW_DIAGRAM.md  README.md  black.toml  docker-compose.yml  flake8  gunicorn.conf.py  mypy.ini  pyproject.toml
deploy/: .env.production.example  DEPLOYMENT.md  build.sh
deploy/nginx/: nginx.conf.example
deploy/systemd/: htqa-events.service.example
src/: __init__.py  gunicorn_worker.py  main.py
src/application/: exceptions.py
src/application/dto/: event_dto.py
src/application/services/: __init__.py  event_service.py  idempotency_service.py  notification_service.py  rate_limiter_service.py  severity_classifier.py
src/domain/entities/: event.py
src/domain/ports/: __init__.py  repository.py
src/domain/value_objects/: event_status.py  severity.py
src/infrastructure/database/: models.py  partition_ddl.py  session.py
src/infrastructure/notifications/: __init__.py  email_notifier.py
src/infrastructure/repositories/: audit_log_repository.py  cache_repository.py  event_repository.py
src/presentation/dependencies/: __init__.py  auth.py
src/presentation/middleware/: audit.py
src/presentation/routes/: events.py  health.py
tests/: conftest.py
tests/test_api/: test_events_integration.py
tests/test_application/: test_severity_classifier.py
tests/test_domain/: test_event.py
tests/test_infrastructure/: test_repositories.py
tests/test_presentation/test_middleware/: test_audit.py
